Bluewolf SFMTA/src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <formula>Account__r.BillingStreet + &quot; &quot; +  Account__r.BillingCity + &quot; &quot; + Account__r.BillingState + &quot; &quot; +  Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that Insurance documentation has been provided.</description>
        <label>Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Miles_Traveled_in_SF__c</fullName>
        <inlineHelpText>Monthly vehicle miles traveled by all vehicles in commuter shuttle service in San Francisco (include any deadheading)</inlineHelpText>
        <label>Monthly Miles Traveled in SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents__c</fullName>
        <label>Number of Documents</label>
        <summaryForeignKey>Application_Attachment__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>STL_API_Specifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that documentation has been provided.</description>
        <label>API Specifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Accessibility_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that documentation has been provided.</description>
        <label>Accessibility Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Avg_Daily_Boardings_in_SF__c</fullName>
        <description>Average daily boardings for all vehicles in commuter shuttle service in San Francisco</description>
        <inlineHelpText>Average daily boardings for all vehicles in commuter shuttle service in San Francisco</inlineHelpText>
        <label>Avg Daily Boardings in SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Avg_Daily_Occupancy_Exiting_SF__c</fullName>
        <inlineHelpText>Average daily occupancy for each vehicle upon exiting San Francisco (if applicable)</inlineHelpText>
        <label>Avg Daily Occupancy (Exiting SF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Avg_Daily_Occupancy_at_Destination__c</fullName>
        <inlineHelpText>Average daily occupancy for each vehicle upon arrival at destination</inlineHelpText>
        <label>Avg Daily Occupancy (at Destination)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Avg_of_Shuttles_in_Operation_Daily__c</fullName>
        <label>Avg # of Shuttles in Operation (Daily)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_CHP_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that CHP Inspection documentation has been provided.</description>
        <label>CHP Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_CPUC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if CPUC documentation has been provided.</description>
        <label>CPUC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_I_agree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You must select &quot;Edit&quot; first to edit the record in order to check this box.</inlineHelpText>
        <label>I agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Monthly_Average_Travel_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Average Travel Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_No_Outstanding_Citations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Outstanding Citations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_No_Outstanding_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Outstanding Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STL_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Service_Disruption_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that documentation has been provided.</description>
        <label>Service Disruption Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Tech_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STL_Vehicle_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safe_Streets_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that documentation has been provided.</description>
        <label>Safe Streets Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SymbolField__c</fullName>
        <defaultValue>&quot;I certify that I have uploaded all required documentation and am ready to submit my completed application for review by the Commuter Shuttle Program at SFMTA.&quot;</defaultValue>
        <label>☀︎</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terms_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify that documentation has been provided.</description>
        <label>Terms Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Number_of_Documents__c</columns>
        <columns>Account_Billing_Address__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Applications</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Account_Billing_Address__c</columns>
        <columns>Number_of_Documents__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Applications</label>
    </listViews>
    <listViews>
        <fullName>New_Applications</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Account_Billing_Address__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New Applications</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Fill_Out_App_Rejection_Reason</fullName>
        <active>true</active>
        <description>Must fill out rejection reason if you deny an application at the application level</description>
        <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Denied&quot;), ISBLANK(STL_Rejection_Reason__c))</errorConditionFormula>
        <errorDisplayField>STL_Rejection_Reason__c</errorDisplayField>
        <errorMessage>Please fill out why you are rejecting this application.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Approve_After_All_Elements_Approved</fullName>
        <active>true</active>
        <description>Can only change an overall application status to approved once all discrete items on an application have been verified/validated.</description>
        <errorConditionFormula>AND(
OR(
 STL_Documentation__c = FALSE, 
 STL_Monthly_Average_Travel_Data__c = FALSE, 
 STL_No_Outstanding_Citations__c = FALSE,
STL_No_Outstanding_Invoices__c = FALSE,  
 STL_Routing__c = FALSE, 
 STL_Tech_Contractor__c = FALSE, 
 STL_Vehicle_Registration__c = FALSE),  ISPICKVAL(Status__c, &quot;Approved&quot;))</errorConditionFormula>
        <errorMessage>Please ensure all elements of this application are validated before approving the overall application.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Submit_if_all_9_documents_attached</fullName>
        <active>true</active>
        <description>There are 9 documents that need to be attached before being submitted</description>
        <errorConditionFormula>AND( STL_I_agree__c = True, Number_of_Documents__c &lt; 9)</errorConditionFormula>
        <errorMessage>Not all required documentation has been attached to this application.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STL_Operators_Can_Only_Select_Submitted</fullName>
        <active>true</active>
        <description>Prevents shuttle operators from changing application status to anything but &quot;In Process&quot; or &quot;Submitted - Pending Approval&quot;</description>
        <errorConditionFormula>AND(
$Profile.Name  = &quot;Customer Community Login 2&quot;,
ISCHANGED(Status__c),
NOT(OR(TEXT(Status__c) = &quot;In Process&quot;,TEXT(Status__c) = &quot;Submitted - Pending Approval&quot;)))</errorConditionFormula>
        <errorMessage>Please select &quot;Submitted - Pending Approval&quot; if you are ready to submit your application. Otherwise, leave it at &quot;In Process&quot; until you are ready to do so.</errorMessage>
    </validationRules>
</CustomObject>